--- a/RiverWatcherAppV2/RiverWatcherAppV2/RiverWatcherAppV2-Info.plist
+++ b/RiverWatcherAppV2/RiverWatcherAppV2/RiverWatcherAppV2-Info.plist
@@ -35,6 +35,9 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
+	</array>
+	<key>UISupportedInterfaceOrientations~ipad</key>
+	<array>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
